--- a/app.css
+++ b/app.css
@@ -4,6 +4,8 @@
   width: fit-content;
   padding: 10px;
   margin: 0 auto;
+  float:left;
+  width: 60%;
 }
 .grid-item {
   background-color: wheat;
@@ -12,4 +14,12 @@
   text-align: center;
   height: 200px;
   margin:10px;
+
+}
+ul {
+	float: right;
+    width: 30%;
+}
+img {
+	width: 100px;
 }
