--- a/app.css
+++ b/app.css
@@ -2,20 +2,26 @@
   display: grid;
   grid-template-columns: 200px 200px 200px;
   width: fit-content;
-  padding: 10px;
+ /* padding: 10px;*/
   margin: 0 auto;
   float:left;
   width: 60%;
 }
 #grid-container >div {
   background-color: wheat;
-  border: 1px solid rgba(0, 0, 0, 1);
+
   font-size: 30px;
   text-align: center;
-  height: 200px;
+  height: 180px;
   margin:10px;
 
 }
+
+#grid-container >div img{
+  vertical-align: middle;
+
+}
+
 ul {
 	float: right;
     width: 30%;
