--- a/css/app.scss
+++ b/css/app.scss
@@ -24,13 +24,13 @@
 			padding: 12px;
 			cursor: pointer;
 			color:white;
+			height: auto;
 		}
 	}
 }
 ul {
 	float: right;
 	width: 30%;
-	touch-action:none;
 	ol{
 		width: fit-content;
 		img {
