--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,7 @@ ul {
   float: right;
   width: 30%; }
   ul li {
+    list-style: none;
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content; }
@@ -47,3 +48,6 @@ ul {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content; }
+
+.hide {
+  display: none; }
