--- a/css/app.scss
+++ b/css/app.scss
@@ -28,14 +28,16 @@
 		}
 	}
 }
-ul {
-	float: right;
-	width: 30%;
-	li{
-		list-style: none;
-		width: fit-content;
-		img {
-			width: 100px;
+#draggableList{
+	ul {
+		float: right;
+		width: 30%;
+		li{
+			list-style: none;
+			width: fit-content;
+			img {
+				width: 100px;
+			}
 		}
 	}
 }
